--- a/README.qmd
+++ b/README.qmd
@@ -12,10 +12,13 @@ library(quarto)
 library(magick)
 
 # Render template
+# Render template
+fs::dir_copy("_extensions/memo", "_extensions/numbats/memo")
 quarto_render(input = "template.qmd")
+fs::dir_delete("_extensions/numbats")
 # Convert rendered PDF to PNG
-image_read_pdf("template.pdf") |>
-  image_montage(geometry = "x2000+25+35", tile = "3", bg = "grey92", shadow = TRUE) |>
+image_read_pdf("template.pdf", pages = 1) |>
+  image_montage(geometry = "x500+25+35", tile = 1, bg = "grey92", shadow = TRUE) |>
   image_convert(format = "png") |>
   image_write("examples/template.png")
 # Move pdf to examples folder
@@ -47,7 +50,5 @@ quarto install extension numbats/monash-quarto-memo
 ```
 
 ## Example
-
-- [template.qmd](template.qmd)
 
 [![](examples/template.png)](examples/template.pdf)
