Updated default font to Fira Sans

--- a/_extensions/memo/monashmemo.tex
+++ b/_extensions/memo/monashmemo.tex
@@ -2,9 +2,9 @@
 \usepackage{float}
 $if(fontfamily)$
 \usepackage[$for(fontfamilyoptions)$$fontfamilyoptions$$sep$,$endfor$]{$fontfamily$}
-\usepackage[tabular,lf]{sourcesanspro}
 $else$
-\usepackage[default,tabular,lf]{sourcesanspro}
+\usepackage[scale=0.85]{sourcecodepro}
+\usepackage[default,lf,t]{FiraSans}
 \usepackage[cmintegrals]{newtxsf}
 \usepackage[italic,eulergreek]{mathastext}
 $endif$
