Consistent fonts across all quarto templates

--- a/_extensions/memo/monashmemo.tex
+++ b/_extensions/memo/monashmemo.tex
@@ -3,10 +3,10 @@
 $if(fontfamily)$
 \usepackage[$for(fontfamilyoptions)$$fontfamilyoptions$$sep$,$endfor$]{$fontfamily$}
 $else$
-\usepackage[scale=0.85]{sourcecodepro}
-\usepackage[default,lf,t]{FiraSans}
-\usepackage[cmintegrals]{newtxsf}
-\usepackage[italic,eulergreek]{mathastext}
+\usepackage{bera}
+\usepackage[charter,expert]{mathdesign}
+\usepackage[lf,t]{FiraSans}
+\usepackage[scale=0.9]{sourcecodepro}
 $endif$
 \usepackage{setspace}
 \usepackage{amssymb,amsmath}
