template now compiling after installation

--- a/_extensions/memo/monashmemo.tex
+++ b/_extensions/memo/monashmemo.tex
@@ -343,11 +343,11 @@ $endif$
 
 \pretitle{%
 $if(branding)$%
-\begin{textblock}{4}(1.9,0.85)\includegraphics[height=1.5cm]{_extensions/numbats/memo/monash2}\end{textblock}%
-\begin{textblock}{4}(17.25,0.8)\includegraphics[height=1.5cm]{_extensions/numbats/memo/MBSPortrait}\end{textblock}%
-\begin{textblock}{6}(13,28)\includegraphics[height=0.7cm]{_extensions/numbats/memo/AACSB}~~~
-        \includegraphics[height=0.7cm]{_extensions/numbats/memo/EQUIS}~~~
-        \includegraphics[height=0.7cm]{_extensions/numbats/memo/AMBA}
+\begin{textblock}{4}(1.9,0.85)\includegraphics[height=1.5cm]{monash2}\end{textblock}%
+\begin{textblock}{4}(17.25,0.8)\includegraphics[height=1.5cm]{MBSPortrait}\end{textblock}%
+\begin{textblock}{6}(13,28)\includegraphics[height=0.7cm]{AACSB}~~~
+        \includegraphics[height=0.7cm]{EQUIS}~~~
+        \includegraphics[height=0.7cm]{AMBA}
 \end{textblock}
 $endif$
 \vspace*{-1.2cm}
