--- a/_extensions/memo/before-title.tex
+++ b/_extensions/memo/before-title.tex
@@ -1,6 +1,6 @@
 % Fonts
 \usepackage{bera}
-\usepackage[charter,expert]{mathdesign}
+\usepackage[charter]{mathdesign}
 \usepackage[lf,t]{FiraSans}
 \usepackage[scale=0.9]{sourcecodepro}
 
