Reverted to heavier penalties

--- a/_extensions/memo/before-title.tex
+++ b/_extensions/memo/before-title.tex
@@ -8,8 +8,9 @@
 \sloppy
 \raggedbottom
 \usepackage[bottom]{footmisc}
-\widowpenalty = 2000
-\brokenpenalty = 2000
+\clubpenalty = 10000
+\widowpenalty = 10000
+\brokenpenalty = 10000
 \allowdisplaybreaks
 \usepackage{microtype}
 
