--- a/README.qmd
+++ b/README.qmd
@@ -33,7 +33,7 @@ You can use this as a template to create a memo.
 To do this, use the following command:
 
 ```bash
-quarto use template numbats/monash-quarto-memo
+quarto use template quarto-monash/memo
 ```
 
 This will install the extension and create an example qmd file that you can use as a starting place for your memo.
@@ -44,7 +44,7 @@ You may also use this format with an existing Quarto project or document.
 From the quarto project or document directory, run the following command to install this format:
 
 ```bash
-quarto install extension numbats/monash-quarto-memo
+quarto install extension quarto-monash/memo
 ```
 
 ## Example
