Tighter mono font

--- a/_extensions/memo/before-title.tex
+++ b/_extensions/memo/before-title.tex
@@ -2,7 +2,7 @@
 \usepackage{bera}
 \usepackage[charter]{mathdesign}
 \usepackage[lf,t]{FiraSans}
-\usepackage[scale=0.9]{sourcecodepro}
+%\usepackage[scale=0.9]{sourcecodepro}
 
 %% Line and page breaking
 \sloppy
