--- a/README.qmd
+++ b/README.qmd
@@ -25,7 +25,7 @@ fs::file_move("template.pdf", "examples/template.pdf")
 
 # Monash Memo Format Template
 
-This is a Quarto template that assists you in creating a memo, optionally with Monash University branding.
+This is a Quarto template that assists you in creating a memo, optionally with Monash University branding. There are two versions of the template, one using LaTeX (`memo-pdf`), and one using Typst (`memo-typst`). The latter is faster and more reliable.
 
 ## Creating a new memo
 
