--- a/template.qmd
+++ b/template.qmd
@@ -3,9 +3,7 @@ title: Note to self
 author: Marie Curie
 branding: true
 linestretch: 1.2
-format:
-  memo-typst: default
-  memo-pdf: default
+format: memo-typst # Use memo-pdf to use latex
 ---
 
 **Lorem ipsum dolor** sit amet, consectetur adipiscing elit. Proin mollis dolor vitae tristique *eleifend*. Quisque non ipsum sit amet velit malesuada consectetur. Praesent vel facilisis leo. Sed facilisis varius orci, ut aliquam lorem malesuada in. Morbi nec purus at nisi fringilla varius non ut dui. Pellentesque bibendum sapien velit. Nulla purus justo, congue eget enim a, elementum sollicitudin eros. Cras porta augue ligula, vel adipiscing odio ullamcorper eu. In tincidunt nisi sit amet tincidunt tincidunt. Maecenas elementum neque eget dolor [egestas fringilla](http://example.com):
